# private-facts-fastapi

./: .gitignore  JUSTFILE  Makefile  README.md  env-template  pyproject.toml  pytest.ini  requirements.txt  tahoe.py
src/: blood_type.py  facts.py  main.py  meyers_briggs.py  temperature.py  zodiac_sign.py
src/api/: main.py  tahoe.py
templates/: error.html  index.html
tests/: __init__.py  conftest.py  facts_test.py  storage_test.py  test_api.py  test_tahoe.py  user_test.py
