[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "private-facts-fastapi"
version = "0.1.0"
description = "Tahoe-lafs FastAPI app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
]

[tool.hatch.build]
exclude = [
  "packages",
  "dist",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "hypothesis>=6.135.26",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.2",
]
