[project]
name = "private-facts-fastapi"
version = "0.1.0"
description = "Tahoe-lafs FastAPI app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "fastapi-cli>=0.0.8",
    "jinja2>=3.1.6",
    "python-decouple>=3.8",
    "urllib3>=2.5.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.7",
]
